--- a/Admin/Pages/Certificates/Details.cshtml
+++ b/Admin/Pages/Certificates/Details.cshtml
@@ -135,6 +135,6 @@
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.Certificate.Id">Edit</a> |
     <a asp-page="./Index">Back to List</a> |
-    <a asp-page="./Locate" asp-route-id="@Model.Certificate.Id">Locate</a> |
+    <a asp-page="./Locate" asp-route-id="@Model.Certificate.Id" class="load-link">Locate</a> |
     <a asp-page="./Delete" asp-route-id="@Model.Certificate.Id">Delete</a>
 </div>
