--- a/Admin/Pages/Competencies/Details.cshtml
+++ b/Admin/Pages/Competencies/Details.cshtml
@@ -102,6 +102,6 @@
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.Competency.Id">Edit</a> |
     <a asp-page="./List" asp-route-typeid="@Model.Competency.TypeId">Back to List</a> |
-    <a asp-page="./Locate" asp-route-id="@Model.Competency.Id">Locate</a> |
+    <a asp-page="./Locate" asp-route-id="@Model.Competency.Id" class="load-link">Locate</a> |
     <a asp-page="./Delete" asp-route-id="@Model.Competency.Id">Delete</a>
 </div>
