--- a/Admin/Pages/Certificates/Descriptions/Details.cshtml
+++ b/Admin/Pages/Certificates/Descriptions/Details.cshtml
@@ -27,7 +27,7 @@
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.Description.Id">Edit</a> |
     <a asp-page="./Index">Back to List</a> |
-    <a asp-page="./Locate" asp-route-id="@Model.Description.Id">Locate</a> |
+    <a asp-page="./Locate" asp-route-id="@Model.Description.Id" class="load-link">Locate</a> |
     <a asp-page="./Delete" asp-route-id="@Model.Description.Id">Delete</a>
 </div>
 
