--- a/Admin/Pages/Certificates/Descriptions/Locate.cshtml
+++ b/Admin/Pages/Certificates/Descriptions/Locate.cshtml
@@ -2,8 +2,11 @@
 @model Admin.Pages.Certificates.Descriptions.LocateModel
 @using Business.Dtos.JobPositions
 @using Business.Dtos.JobCompetencies
+@inject Admin.Data.FormattingService Formatter
+
 @{
     ViewData["Title"] = "Locate Certificate Descriptions";
+    ViewData["HideBodyOverflow"] = true;
 
     bool addedInOnePlace = false;
 
@@ -18,21 +21,25 @@
         filterValue = filterValue.Trim();
     }
 
-    var itemsThatMatchFilter = Model.Descriptions.Where(e => (Model.Filter == null
-            || e.DescEng.ToLower().Contains(Model.Filter.ToLower())
-            || e.DescFre.ToLower().Contains(Model.Filter.ToLower()))
-            && (e.Active == 1));
-
+    var itemsThatMatchFilter = Model.Descriptions.Where(x => x.Active == 1 && (x.DescEng != "" && x.DescFre != "")).ToList(); // the empty description should not display
+    if (!string.IsNullOrWhiteSpace(Model.Filter))
+    {
+        Formatter.Filters = filterValue;
+        Formatter.PrepareFiltersArray();
+        itemsThatMatchFilter = itemsThatMatchFilter
+        .Where(x => Formatter.RowContentsMatchFilters(new string[] { x.DescEng, x.DescFre })).ToList();
+    }
     itemsThatMatchFilter = itemsThatMatchFilter.OrderBy(x => x.DescEng.ToLower()).ToList();
     var itemsList = itemsThatMatchFilter.ToList();
+    var numItems = itemsList.Count();
 }
 
 <div class="collapse @(Model.DisplayTopOfPage ? "show" : "")" id="collapsibleTop" aria-expanded="@(Model.DisplayTopOfPage ? "true" : "false")">
     @if (!Model.LocatingADescription)
     {
-        <h1>Locate Certificate Descriptions</h1>
+        <h1>Locate Certificate Descriptions @(numItems > 0 ? "(" + numItems + ")" : "")</h1>
 
-        <form>
+        <form class="@(numItems == 0 && string.IsNullOrWhiteSpace(Model.Filter) ? "dontShow" : "")">
             <div class="form-actions no-color">
                 <h6>
                     <label for="Filter">Find certificate descriptions:</label>
@@ -85,7 +92,7 @@
 
 @if (!Model.LocatingADescription)
 {
-    @if (itemsThatMatchFilter.Any())
+    @if (itemsList.Any())
     {
         <div id="table-container" style="max-height: @(Model.LastTableContainerHeight)px; height: @(Model.LastTableContainerHeight)px">
             <table class="table">
